# EdgeLake

./: .gitignore  ADOPTERS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile-save  Dockerfile.builder_pip.alpine  Dockerfile.nebula  MAINTAINERS.md  MANIFEST.in  README.md  check_mcp_execution_path.py  deploy_anylog.sh  deploy_edgelake.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py  setup_exe.py  setup_pip.py  test-blockchain-format.sh  test-direct-client-formats.py  test-mcp-sse.py  test_protocol_exec_integration.py
Dockerfiles/: Dockerfile.builder_exe.alpine  Dockerfile.exe.alpine
dco-signoff/: EricAquaronne-dco-signoff.txt  FaisalNawab-dco-signoff.txt  MarkDavidson-dco-signoff.txt  MosheShadmon-dco-signoff.txt  OriShadmon-dco-signoff.txt  PranavPurathepparambil-dco-signoff.txt  RoyShadmon-dco-signoff.txt
edge_lake/: README.md  anylog.py  edgelake.py
edge_lake/api/: al_grafana.py  al_kafka.py  etherip_client.py  modbus_client.py  opcua_client.py  plc_client.py  plc_utils.py  pycomm3_FakeLogixDriver.py  struct_tree.py
edge_lake/blockchain/: AnyLog.sol  README.md  blockchain.py  bplatform.py  bsync.py  eos.py  ethereum.py  gateway.py  hyperledger.py  metadata.py
edge_lake/cmd/: command_execution.py  data_monitor.py  json_instruct.py  member_cmd.py  monitor.py  native_api.py  pkg_validation.py  protocol_exec.py  user_cmd.py
edge_lake/dbms/: akave.py  (+19 more)
external_lib/: log_processing.py  requirements.txt
imgs/: the-linux-foundation
nebula/: config_nebula.py  deploy_nebula.sh  export_nebula.sh  validtae_ip_against_cidr.py
other/: update_code.sh
(+170 files in other folders)
