[build-system]
# jwt in Alpine to install    - apk add py3-jwt
# numpy in Alpine to install  - apk add dev py3-numpy
# OpenCV in Alpine to install - apk add py3-opencv
# for blockchain usage install packages manually
requires = [
    # General
    "pip",
    "cython>=0.0;python_version>='3.0'",
    "ast>=0.0;python_version>='3.0'",
    "requests>=0.0;python_version>='3.0'",
    "cryptography>=0.0;python_version>='3.0'",
    "jwt>=0.0;python_version>='3.0'",
    "pyOpenSSL>=0.0;python_version>='3.0'",
    "psutil>=0.0;python_version>='3.0'",
    # Datetime
    "python-dateutil>=0.0;python_version>='3.0'",
    "pytz>=0.0;python_version>='3.0'",

    # DBMS
    "psycopg2-binary>=0.0;python_version>='3.0'  and platform_system!='Alpine'",
    "pymongo>=0.0;python_version>='3.0' and platform_system!='Alpine'",

    # North / South plug-ins
    "paho-mqtt>=0.0;python_version>='3.0'",
    "kafka-python>=0.0;",

    # blockchain
    "web3>=0.0;python_version>='3.0'",
    "py4j>=0.0;;python_version>='3.0'",

    # blobs
#    "base64>=0.0;python_version>='3.0'", # exists is by default
    "numpy>=0.0;python_version>='3.0'",
    "opencv-python>=0.0;python_version>='3.0' and platform_system!='Alpine'"

    # gRPC
    "grpcio>='0.0'",
    "grpcio-tools>='0.0'",
    "grpcio-reflection>='0.0'"
]